# claude_telegram_interface

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: bot_api.py  claude_session.py  commands.py  config.py  handlers.py  i18n.py  login_pty.py  main.py  markdown.py  paths.py  permissions.py  registry.py  render.py  state.py  streaming.py
bot/locales/: en.toml  ru.toml  uk.toml
deploy/: install.sh
deploy/systemd/: tg-interface-watch.path  tg-interface-watch.service  tg-interface.service
tests/: test_i18n.py  test_markdown.py  test_render.py  test_streamjson_codec.py  test_throttle.py
